--- a/config/samples/smoke-dist/xgboostjob_v1alpha1_rabit_test.yaml
+++ b/config/samples/smoke-dist/xgboostjob_v1alpha1_rabit_test.yaml
@@ -8,26 +8,70 @@ spec:
       replicas: 1
       restartPolicy: Never
       template:
+        metadata:
+          labels:
+            app: pytorch-operator
+            meta.k8s.alipay.com/zone: kmaker
+            sigma.ali/app-name: kmaker-pytorch-operator
+            sigma.ali/deploy-unit: kmaker
+            sigma.ali/instance-group: sigma-alipay-test
+            sigma.ali/site: gtjsqa
         apiVersion: v1
         kind: Pod
         spec:
           containers:
           - name: xgboostjob
-            image: docker.io/merlintang/xgboost-dist-rabit-test:1.2
+            image: reg.docker.alibaba-inc.com/kubemaker/xgboost-dist-rabit-test:1.2
+            resources:
+              limits:
+                cpu: 0.1
+                memory: 100Mi
+                ephemeral-storage: 1Gi
+              requests:
+                cpu: 0.1
+                memory: 100Mi
+                ephemeral-storage: 1Gi
             ports:
             - containerPort: 9991
               name: xgboostjob-port
             imagePullPolicy: Always
+
     Worker:
       replicas: 2
       restartPolicy: Never
       template:
+        resources:
+          limits:
+            cpu: 0.1
+            memory: 100Mi
+            ephemeral-storage: 1Gi
+          requests:
+            cpu: 0.1
+            memory: 100Mi
+            ephemeral-storage: 1Gi
+        metadata:
+          labels:
+            app: pytorch-operator
+            meta.k8s.alipay.com/zone: kmaker
+            sigma.ali/app-name: kmaker-pytorch-operator
+            sigma.ali/deploy-unit: kmaker
+            sigma.ali/instance-group: sigma-alipay-test
+            sigma.ali/site: gtjsqa
         apiVersion: v1
         kind: Pod
         spec:
           containers:
           - name: xgboostjob
-            image: docker.io/merlintang/xgboost-dist-rabit-test:1.2
+            image: reg.docker.alibaba-inc.com/kubemaker/xgboost-dist-rabit-test:1.2
+            resources:
+              limits:
+                cpu: 0.1
+                memory: 100Mi
+                ephemeral-storage: 1Gi
+              requests:
+                cpu: 0.1
+                memory: 100Mi
+                ephemeral-storage: 1Gi
             ports:
             - containerPort: 9991
               name: xgboostjob-port
